; ModuleID = '/home/carl/AnghaBench/linux/lib/zstd/extr_fse_compress.c_FSE_countFast_wksp.c'
source_filename = "/home/carl/AnghaBench/linux/lib/zstd/extr_fse_compress.c_FSE_countFast_wksp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @FSE_countFast_wksp(i32* %0, i32* %1, i8* %2, i64 %3, i32* %4) #0 {
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32*, align 8
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i8* %2, i8** %9, align 8
  store i64 %3, i64* %10, align 8
  store i32* %4, i32** %11, align 8
  %12 = load i64, i64* %10, align 8
  %13 = icmp ult i64 %12, 1500
  br i1 %13, label %14, label %20

14:                                               ; preds = %5
  %15 = load i32*, i32** %7, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = load i8*, i8** %9, align 8
  %18 = load i64, i64* %10, align 8
  %19 = call i64 @FSE_count_simple(i32* %15, i32* %16, i8* %17, i64 %18)
  store i64 %19, i64* %6, align 8
  br label %27

20:                                               ; preds = %5
  %21 = load i32*, i32** %7, align 8
  %22 = load i32*, i32** %8, align 8
  %23 = load i8*, i8** %9, align 8
  %24 = load i64, i64* %10, align 8
  %25 = load i32*, i32** %11, align 8
  %26 = call i64 @FSE_count_parallel_wksp(i32* %21, i32* %22, i8* %23, i64 %24, i32 0, i32* %25)
  store i64 %26, i64* %6, align 8
  br label %27

27:                                               ; preds = %20, %14
  %28 = load i64, i64* %6, align 8
  ret i64 %28
}

declare dso_local i64 @FSE_count_simple(i32*, i32*, i8*, i64) #1

declare dso_local i64 @FSE_count_parallel_wksp(i32*, i32*, i8*, i64, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
